<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/meu_perfil"
        android:textColor="#4CAF50"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvNome"
        android:text="@string/nome_do_usu_rio"
        android:textSize="18sp"
        android:layout_marginBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvEmail"
        android:text="@string/email_do_usu_rio"
        android:textSize="18sp"
        android:layout_marginBottom="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:text="@string/sair"
        android:textColor="#FFFFFF"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />
</LinearLayout>
