<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/bgImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/imagem_de_fundo"
        android:scaleType="centerCrop"
        android:src="@drawable/fundo_macarrao"
        tools:ignore="ImageContrastCheck" />

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A6FFFFFF"/>

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_alignParentBottom="true"
        android:gravity="center">


        <Button
            android:id="@+id/btnBuscarReceitas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:backgroundTint="#4CAF50"
            android:text="@string/buscar_receitas"
            android:textColor="#FFFFFF"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />

        <Button
            android:id="@+id/btnRestaurantes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:backgroundTint="#4CAF50"
            android:text="@string/restaurantes_proximos"
            android:textColor="#FFFFFF"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />

        <Button
            android:id="@+id/btnFavoritos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#4CAF50"
            android:text="@string/favoritos"
            android:textColor="#FFFFFF"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />

        <Button
            android:id="@+id/btnPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="#4CAF50"
            android:text="@string/perfil"
            android:textColor="#FFFFFF"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />

    </LinearLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="496dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="0dp"
        android:contentDescription="@string/logo_app"
        android:src="@drawable/logo_verdi"
        tools:ignore="ImageContrastCheck" />

</RelativeLayout>

