<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="#FFFFFF"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/login"
            android:textColor="#4CAF50"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/etSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:padding="12dp"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#4CAF50"
            android:padding="12dp"
            android:text="@string/entrar"
            android:textColor="#FFFFFF"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />

        <TextView
            android:id="@+id/tvCadastro"
            android:layout_width="282dp"
            android:layout_height="29dp"
            android:layout_marginTop="16dp"
            android:text="@string/nao_tem_conta_cadastre"
            android:textColor="#4CAF50"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck,TextSizeCheck" />
    </LinearLayout>
</ScrollView>
